[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy/enemy.gd" type="Script" id=2]
[ext_resource path="res://Enemy/playerVision.gd" type="Script" id=3]
[ext_resource path="res://Enemy/lightVision.gd" type="Script" id=4]
[ext_resource path="res://Enemy/hitbox.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.031
height = 24.1786

[sub_resource type="CircleShape2D" id=2]
radius = 182.492

[sub_resource type="CircleShape2D" id=3]
radius = 581.904

[sub_resource type="CircleShape2D" id=4]
radius = 46.0385

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
recovery_time = 2
wander_speed = 30

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="playerVision" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerVision"]
modulate = Color( 1, 1, 1, 0.572549 )
self_modulate = Color( 0.427451, 0.0980392, 0.611765, 0.705882 )
shape = SubResource( 2 )

[node name="lightVision" type="Area2D" parent="."]
collision_layer = 65
collision_mask = 4
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lightVision"]
modulate = Color( 1, 1, 1, 0.572549 )
self_modulate = Color( 0.0980392, 0.611765, 0.262745, 0.705882 )
shape = SubResource( 3 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 33
collision_mask = 134
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="audio" type="AudioStreamPlayer2D" parent="."]

[node name="timer" type="Timer" parent="audio"]
[connection signal="body_entered" from="playerVision" to="playerVision" method="_on_playerVision_body_entered"]
[connection signal="body_exited" from="playerVision" to="playerVision" method="_on_playerVision_body_exited"]
[connection signal="area_shape_entered" from="lightVision" to="lightVision" method="_on_lightVision_area_shape_entered"]
[connection signal="area_shape_exited" from="lightVision" to="lightVision" method="_on_lightVision_area_shape_exited"]
[connection signal="timeout" from="audio/timer" to="." method="_on_timer_timeout"]
